@@ -1,3 +1,10 @@
+2015-10-07 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCval.c:
+	  Add bound check in reorderIlist().
+	* support/regression/bug-2423.c:
+	  Add a new test case.
+
 2015-10-06 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCerr.h,
